css/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

.container{
    max-width: 90vw;
    margin: 0 auto;
}

.flex{
    display: flex;
    flex-direction: row;
}

.relative{
    position: relative;
}

.absolute{
    position: absolute;
}

.fixed{
    position: fixed;
}

.right{
    justify-content: end;
}

body{
    color: white;
    font-family: sans-serif;
    height: 100vh;
}

header{
    height: 10vh;
}

header,
main{
    background-color: black;
    /*padding-bottom: 1.5rem;*/
}

.header-action{
    background-color: #4A4A4A;
    border-radius: 5px;
    margin: 2px 3px 0 5px;
    padding: 5px;
    font-size: .8rem;
}

main{
    height: 80vh;
    overflow: scroll;
}

main>.container.flex{
    justify-content: space-between;
    flex-wrap: wrap;

}

.card{
    z-index: 1;
}

.name-tag{
    background-color: rgb(0, 0, 0, 0.4);
    font-size: .7rem;
    font-weight: 600;
    bottom: 0;
    padding: .3rem;
}

footer{
    background-color: #222222;
    z-index: 2;
}

nav{
    justify-content: space-between;
    font-size: .6rem;
    text-align: center;
    align-items: center;
}

nav i{
    font-size: 1.5rem;
    padding: .7rem 1.1rem;
    margin: auto;
}

nav p{
    padding-bottom: .5rem;
}

i.fa-angle-up{
    font-size: 1.2rem;
}

ul{
    list-style-type: none;
}

.exit-call{
    color: red;
    background-color: #4A4A4A;
    width: 8vw;
    padding-top: 1.7rem;
    font-size: .9rem;
    font-weight: 600;
    height: 65.6px;
}

#share-button{
    color: #47C901;
}

